<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context=".MainActivity">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/button_background"
        android:text="@string/first_Butn_text"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/button_background"
        android:text="@string/second_Butn_text"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/button_background"
        android:text="@string/third_Butn_text"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="15sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_background"
        android:text="@string/fourth_Butn_text"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="15sp" />

</LinearLayout>